Project

General

Profile

Actions

Bug #15364

closed

TestJournalRecorder.FutureFlush

Added by Sage Weil about 8 years ago. Updated about 8 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

[ RUN      ] TestJournalRecorder.FutureFlush
lt-unittest_journal: ./common/Mutex.h:89: void Mutex::_post_lock(): Assertion `nlock == 0' failed.
*** Caught signal (Aborted) **
 in thread 7fb6bffff700 thread_name:fn_anonymous
 ceph version 10.1.0-480-g0d4243b (0d4243b337789a0c10153020d5e6800870393c0c)
 1: (()+0x262adf) [0x7fb7681e5adf]
 2: (()+0x10430) [0x7fb75d851430]
 3: (gsignal()+0x38) [0x7fb75c5f0a98]
 4: (abort()+0x16a) [0x7fb75c5f272a]
 5: (()+0x2d247) [0x7fb75c5e9247]
 6: (()+0x2d2f2) [0x7fb75c5e92f2]
 7: (()+0x268be3) [0x7fb7681ebbe3]
 8: (journal::JournalMetadata::flush_commit_position()+0x173) [0x7fb768154a73]
 9: (journal::JournalMetadata::shut_down()+0x1a3) [0x7fb768154d03]
 10: (journal::JournalMetadata::~JournalMetadata()+0x1e5) [0x7fb768159a65]
 11: (journal::JournalMetadata::~JournalMetadata()+0x9) [0x7fb768159b69]
 12: (RefCountedObject::put()+0xfa) [0x7fb76814bd5a]
 13: (journal::FutureImpl::~FutureImpl()+0x9c) [0x7fb76814d06c]
 14: (RefCountedObject::put()+0xfa) [0x7fb76814bd5a]
 15: (std::_List_base<std::pair<boost::intrusive_ptr<journal::FutureImpl>, ceph::buffer::list>, std::allocator<std::pair<boost::intrusive_ptr<journal::FutureImpl>, ceph::buffer::list> > >::_M_clear()+0x3e) [0x7fb76814506e]
 16: (journal::ObjectRecorder::handle_append_flushed(unsigned long, int)+0x50d) [0x7fb76816e03d]
 17: (journal::ObjectRecorder::C_AppendFlush::finish(int)+0x13) [0x7fb768170013]
 18: (journal::utils::rados_ctx_callback(void*, void*)+0x28) [0x7fb7681701e8]
 19: (()+0x21404c) [0x7fb76819704c]
 20: (FunctionContext::finish(int)+0x2c) [0x7fb76819c22c]
 21: (Context::complete(int)+0x9) [0x7fb7680f97b9]
 22: (Finisher::finisher_thread_entry()+0x46e) [0x7fb7681e7dee]
 23: (()+0x7555) [0x7fb75d848555]
 24: (clone()+0x6d) [0x7fb75c6bdf3d]
2016-04-04 15:59:16.548258 7fb6bffff700 -1 *** Caught signal (Aborted) **
 in thread 7fb6bffff700 thread_name:fn_anonymous

 ceph version 10.1.0-480-g0d4243b (0d4243b337789a0c10153020d5e6800870393c0c)
 1: (()+0x262adf) [0x7fb7681e5adf]
 2: (()+0x10430) [0x7fb75d851430]
 3: (gsignal()+0x38) [0x7fb75c5f0a98]
 4: (abort()+0x16a) [0x7fb75c5f272a]
 5: (()+0x2d247) [0x7fb75c5e9247]
 6: (()+0x2d2f2) [0x7fb75c5e92f2]
 7: (()+0x268be3) [0x7fb7681ebbe3]
 8: (journal::JournalMetadata::flush_commit_position()+0x173) [0x7fb768154a73]
 9: (journal::JournalMetadata::shut_down()+0x1a3) [0x7fb768154d03]
 10: (journal::JournalMetadata::~JournalMetadata()+0x1e5) [0x7fb768159a65]
 11: (journal::JournalMetadata::~JournalMetadata()+0x9) [0x7fb768159b69]
 12: (RefCountedObject::put()+0xfa) [0x7fb76814bd5a]
 13: (journal::FutureImpl::~FutureImpl()+0x9c) [0x7fb76814d06c]
 14: (RefCountedObject::put()+0xfa) [0x7fb76814bd5a]
 15: (std::_List_base<std::pair<boost::intrusive_ptr<journal::FutureImpl>, ceph::buffer::list>, std::allocator<std::pair<boost::intrusive_ptr<journal::FutureImpl>, ceph::buffer::list> > >::_M_clear()+0x3e) [0x7fb76814506e]
 16: (journal::ObjectRecorder::handle_append_flushed(unsigned long, int)+0x50d) [0x7fb76816e03d]
 17: (journal::ObjectRecorder::C_AppendFlush::finish(int)+0x13) [0x7fb768170013]
 18: (journal::utils::rados_ctx_callback(void*, void*)+0x28) [0x7fb7681701e8]
 19: (()+0x21404c) [0x7fb76819704c]
 20: (FunctionContext::finish(int)+0x2c) [0x7fb76819c22c]
 21: (Context::complete(int)+0x9) [0x7fb7680f97b9]
 22: (Finisher::finisher_thread_entry()+0x46e) [0x7fb7681e7dee]
 23: (()+0x7555) [0x7fb75d848555]
 24: (clone()+0x6d) [0x7fb75c6bdf3d]
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

--- begin dump of recent events ---
   -43> 2016-04-04 15:59:15.536177 7fb768569ec0  5 asok(0x7fb771fd7630) register_command perfcounters_dump hook 0x7fb771fdc4d0
   -42> 2016-04-04 15:59:15.536192 7fb768569ec0  5 asok(0x7fb771fd7630) register_command 1 hook 0x7fb771fdc4d0
   -41> 2016-04-04 15:59:15.536198 7fb768569ec0  5 asok(0x7fb771fd7630) register_command perf dump hook 0x7fb771fdc4d0
   -40> 2016-04-04 15:59:15.536204 7fb768569ec0  5 asok(0x7fb771fd7630) register_command perfcounters_schema hook 0x7fb771fdc4d0
   -39> 2016-04-04 15:59:15.536209 7fb768569ec0  5 asok(0x7fb771fd7630) register_command 2 hook 0x7fb771fdc4d0
   -38> 2016-04-04 15:59:15.536219 7fb768569ec0  5 asok(0x7fb771fd7630) register_command perf schema hook 0x7fb771fdc4d0
   -37> 2016-04-04 15:59:15.536225 7fb768569ec0  5 asok(0x7fb771fd7630) register_command perf reset hook 0x7fb771fdc4d0
   -36> 2016-04-04 15:59:15.536228 7fb768569ec0  5 asok(0x7fb771fd7630) register_command config show hook 0x7fb771fdc4d0
   -35> 2016-04-04 15:59:15.536234 7fb768569ec0  5 asok(0x7fb771fd7630) register_command config set hook 0x7fb771fdc4d0
   -34> 2016-04-04 15:59:15.536239 7fb768569ec0  5 asok(0x7fb771fd7630) register_command config get hook 0x7fb771fdc4d0
   -33> 2016-04-04 15:59:15.536244 7fb768569ec0  5 asok(0x7fb771fd7630) register_command config diff hook 0x7fb771fdc4d0
   -32> 2016-04-04 15:59:15.536249 7fb768569ec0  5 asok(0x7fb771fd7630) register_command log flush hook 0x7fb771fdc4d0
   -31> 2016-04-04 15:59:15.536255 7fb768569ec0  5 asok(0x7fb771fd7630) register_command log dump hook 0x7fb771fdc4d0
   -30> 2016-04-04 15:59:15.536259 7fb768569ec0  5 asok(0x7fb771fd7630) register_command log reopen hook 0x7fb771fdc4d0
   -29> 2016-04-04 15:59:15.555574 7fb768569ec0 -1 WARNING: the following dangerous and experimental features are enabled: *
   -28> 2016-04-04 15:59:15.555708 7fb768569ec0  0 lockdep start
   -27> 2016-04-04 15:59:15.556165 7fb768569ec0 -1 WARNING: the following dangerous and experimental features are enabled: *
   -26> 2016-04-04 15:59:15.559618 7fb768569ec0 -1 WARNING: the following dangerous and experimental features are enabled: *
   -25> 2016-04-04 15:59:15.561348 7fb768569ec0  5 asok(0x7fb771fd7630) init /home/sage/src/ceph2/src/out/client.admin.16214.asok
   -24> 2016-04-04 15:59:15.561360 7fb768569ec0  5 asok(0x7fb771fd7630) bind_and_listen /home/sage/src/ceph2/src/out/client.admin.16214.asok
   -23> 2016-04-04 15:59:15.561455 7fb768569ec0  5 asok(0x7fb771fd7630) register_command 0 hook 0x7fb77204fab0
   -22> 2016-04-04 15:59:15.561466 7fb768569ec0  5 asok(0x7fb771fd7630) register_command version hook 0x7fb77204fab0
   -21> 2016-04-04 15:59:15.561480 7fb768569ec0  5 asok(0x7fb771fd7630) register_command git_version hook 0x7fb77204fab0
   -20> 2016-04-04 15:59:15.561492 7fb768569ec0  5 asok(0x7fb771fd7630) register_command help hook 0x7fb771fde8f0
   -19> 2016-04-04 15:59:15.561505 7fb768569ec0  5 asok(0x7fb771fd7630) register_command get_command_descriptions hook 0x7fb771fe06b0
   -18> 2016-04-04 15:59:15.561593 7fb7537fe700  5 asok(0x7fb771fd7630) entry start
   -17> 2016-04-04 15:59:15.589928 7fb768569ec0  1 <cls> cls/replica_log/cls_replica_log.cc:141: Loaded replica log class!
   -16> 2016-04-04 15:59:15.592073 7fb768569ec0 -1 Failed to load class: .libs/libcls_rgw.so: undefined symbol: _ZN4cephlsERSoRKNSt6chrono10time_pointINS_11time_detail10real_clockENS1_8durationImSt5ratioILl1ELl1000000000EEEEEE
   -15> 2016-04-04 15:59:15.592225 7fb768569ec0  1 <cls> cls/statelog/cls_statelog.cc:306: Loaded log class!
   -14> 2016-04-04 15:59:15.592464 7fb768569ec0 -1 Failed to load class: .libs/libcls_log.so: undefined symbol: _Z24cls_cxx_map_write_headerPvPN4ceph6buffer4listE
   -13> 2016-04-04 15:59:15.592562 7fb768569ec0 -1 Failed to load class: .libs/libcls_hello.so: undefined symbol: _ZTI10PGLSFilter
   -12> 2016-04-04 15:59:15.593079 7fb768569ec0 -1 Failed to load class: .libs/libcls_user.so: undefined symbol: _Z24cls_cxx_map_write_headerPvPN4ceph6buffer4listE
   -11> 2016-04-04 15:59:15.593321 7fb768569ec0 -1 Failed to load class: .libs/libcls_cephfs.so: undefined symbol: _ZTI10PGLSFilter
   -10> 2016-04-04 15:59:15.593442 7fb768569ec0 -1 Failed to load class: .libs/libcls_version.so: undefined symbol: _Z19cls_gen_rand_base64Pci
    -9> 2016-04-04 15:59:15.597051 7fb768569ec0 -1 Failed to load class: .libs/libcls_refcount.so: undefined symbol: _Z14cls_cxx_removePv
    -8> 2016-04-04 15:59:15.597212 7fb768569ec0  1 <cls> cls/timeindex/cls_timeindex.cc:259: Loaded timeindex class!
    -7> 2016-04-04 15:59:15.672078 7fb768569ec0  0 <cls> cls/journal/cls_journal.cc:254: journal already exists
    -6> 2016-04-04 15:59:15.679762 7fb73bfff700  0 <cls> cls/journal/cls_journal.cc:83: failed to get omap key: order
    -5> 2016-04-04 15:59:15.682209 7fb750ff9700  0 <cls> cls/journal/cls_journal.cc:562: duplicate client id: client1
    -4> 2016-04-04 15:59:15.686742 7fb751ffb700  0 <cls> cls/journal/cls_journal.cc:83: failed to get omap key: client_client1
    -3> 2016-04-04 15:59:15.690290 7fb7527fc700  0 <cls> cls/journal/cls_journal.cc:83: failed to get omap key: client_client1
    -2> 2016-04-04 15:59:15.693556 7fb6e0ff9700  0 <cls> cls/journal/cls_journal.cc:674: client is not registered: client1
    -1> 2016-04-04 15:59:15.899083 7fb73bfff700  0 <cls> cls/journal/cls_journal.cc:83: failed to get omap key: order
     0> 2016-04-04 15:59:16.548258 7fb6bffff700 -1 *** Caught signal (Aborted) **
 in thread 7fb6bffff700 thread_name:fn_anonymous

 ceph version 10.1.0-480-g0d4243b (0d4243b337789a0c10153020d5e6800870393c0c)
 1: (()+0x262adf) [0x7fb7681e5adf]
 2: (()+0x10430) [0x7fb75d851430]
 3: (gsignal()+0x38) [0x7fb75c5f0a98]
 4: (abort()+0x16a) [0x7fb75c5f272a]
 5: (()+0x2d247) [0x7fb75c5e9247]
 6: (()+0x2d2f2) [0x7fb75c5e92f2]
 7: (()+0x268be3) [0x7fb7681ebbe3]
 8: (journal::JournalMetadata::flush_commit_position()+0x173) [0x7fb768154a73]
 9: (journal::JournalMetadata::shut_down()+0x1a3) [0x7fb768154d03]
 10: (journal::JournalMetadata::~JournalMetadata()+0x1e5) [0x7fb768159a65]
 11: (journal::JournalMetadata::~JournalMetadata()+0x9) [0x7fb768159b69]
 12: (RefCountedObject::put()+0xfa) [0x7fb76814bd5a]
 13: (journal::FutureImpl::~FutureImpl()+0x9c) [0x7fb76814d06c]
 14: (RefCountedObject::put()+0xfa) [0x7fb76814bd5a]
 15: (std::_List_base<std::pair<boost::intrusive_ptr<journal::FutureImpl>, ceph::buffer::list>, std::allocator<std::pair<boost::intrusive_ptr<journal::FutureImpl>, ceph::buffer::list> > >::_M_clear()+0x3e) [0x7fb76814506e]
 16: (journal::ObjectRecorder::handle_append_flushed(unsigned long, int)+0x50d) [0x7fb76816e03d]
 17: (journal::ObjectRecorder::C_AppendFlush::finish(int)+0x13) [0x7fb768170013]
 18: (journal::utils::rados_ctx_callback(void*, void*)+0x28) [0x7fb7681701e8]
 19: (()+0x21404c) [0x7fb76819704c]
 20: (FunctionContext::finish(int)+0x2c) [0x7fb76819c22c]
 21: (Context::complete(int)+0x9) [0x7fb7680f97b9]
 22: (Finisher::finisher_thread_entry()+0x46e) [0x7fb7681e7dee]
 23: (()+0x7555) [0x7fb75d848555]
 24: (clone()+0x6d) [0x7fb75c6bdf3d]
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

--- logging levels ---
   0/ 5 none
   0/ 1 lockdep
   0/ 1 context
   1/ 1 crush
   1/ 5 mds
   1/ 5 mds_balancer
   1/ 5 mds_locker
   1/ 5 mds_log
   1/ 5 mds_log_expire
   1/ 5 mds_migrator
   0/ 1 buffer
   0/ 1 timer
   0/ 1 filer
   0/ 1 striper
   0/ 1 objecter
   0/ 5 rados
   0/ 5 rbd
   0/ 5 rbd_mirror
   0/ 5 rbd_replay
   0/ 5 journaler
   0/ 5 objectcacher
   0/ 5 client
   0/ 5 osd
   0/ 5 optracker
   0/ 5 objclass
   1/ 3 filestore
   1/ 3 journal
   0/ 5 ms
   1/ 5 mon
   0/10 monc
   1/ 5 paxos
   0/ 5 tp
   1/ 5 auth
   1/ 5 crypto
   1/ 1 finisher
   1/ 5 heartbeatmap
   1/ 5 perfcounter
   1/ 5 rgw
   1/10 civetweb
   1/ 5 javaclient
   1/ 5 asok
   1/ 1 throttle
   0/ 0 refs
   1/ 5 xio
   1/ 5 compressor
   1/ 5 newstore
   1/ 5 bluestore
   1/ 5 bluefs
   1/ 3 bdev
   1/ 5 kstore
   4/ 5 rocksdb
   4/ 5 leveldb
   1/ 5 kinetic
   1/ 5 fuse
  -2/-2 (syslog threshold)
  99/99 (stderr threshold)
  max_recent       500
  max_new         1000
  log_file /home/sage/src/ceph2/src/out/client.admin.16214.log
--- end dump of recent events ---
FAIL unittest_journal (exit status: 134)


from make check on master
Actions #1

Updated by Jason Dillaman about 8 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman about 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Jason Dillaman about 8 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF