src/journal/FutureImpl.h
@@ -18,7 +18,6 @@ class Context;
 namespace journal {
 
 class FutureImpl;
-class JournalMetadata;
 typedef boost::intrusive_ptr<FutureImpl> FutureImplPtr;
 
 class FutureImpl : public RefCountedObject, boost::noncopyable {
@@ -29,11 +28,9 @@ public:
     virtual void get() = 0;
     virtual void put() = 0;
   };
-  typedef boost::intrusive_ptr<JournalMetadata> JournalMetadataPtr;
   typedef boost::intrusive_ptr<FlushHandler> FlushHandlerPtr;
 
-  FutureImpl(JournalMetadataPtr journal_metadata, uint64_t tag_tid,
-             uint64_t entry_tid, uint64_t commit_tid);
+  FutureImpl(uint64_t tag_tid, uint64_t entry_tid, uint64_t commit_tid);
 
   void init(const FutureImplPtr &prev_future);
 
@@ -96,7 +93,6 @@ private:
     virtual void finish(int r) {}
   };
 
-  JournalMetadataPtr m_journal_metadata;
   uint64_t m_tag_tid;
   uint64_t m_entry_tid;
   uint64_t m_commit_tid;
